# DexTrackPy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  serebii_scrape.py  the_gui.py
pysvscrape/: serebii_scrape.py
