[tool.poetry]
name = "sv"
version = "0.1.0"
description = ""
authors = ["Thomas TJ Dau <tj.pyro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.1"
loguru = "^0.6.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
PySimpleGUI = "^4.60.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
