[tool.poetry]
name = "sv"
version = "0.1.0"
description = ""
authors = ["Thomas TJ Dau <tj.pyro@gmail.com>"]
readme = "README.md"

[tool.isort]
profile = "black"
py_version = 310
skip_gitignore = true
src_paths = ["pysvscrape"]

[tool.mypy]
files = [
    "*.py",
    "pysvscrape/*.py",
]
exclude = [
    "__init__.py",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.8,<3.12"
httpx = "^0.23.1"
loguru = "^0.6.0"
bs4 = "^0.0.1"
lxml = "^4.9.2"
PySimpleGUI = "^4.60.4"
Pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pyinstaller = "^5.7.0"
pre-commit = "^2.21.0"
mypy = "^0.991"
isort = "^5.11.4"
types-Pillow = "^9.3.0.4"
types-beautifulsoup4 = "^4.11.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
